--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,5 +18,5 @@ walkdir = "2.3.2"
 rand = "0.8.5"
 anyhow = "1.0.79"
 chacha20poly1305 = { version = "0.10.1", features = ["stream"] }
-sha2 = "0.11.0-pre.3"
+sha2 = "0.10.8"
 arrayref = "0.3.6"
