--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "safeR"
-version = "0.1.0"
+version = "0.1.1"
 authors = ["Mateusz Czarnecki (DemwE)"]
 description = "A simple and secure file encryption tool"
 license = "MIT"
@@ -20,3 +20,5 @@ anyhow = "1.0.79"
 chacha20poly1305 = { version = "0.10.1", features = ["stream"] }
 sha2 = "0.10.8"
 arrayref = "0.3.6"
+tokio = {version = "1.36.0" , features = ["full"]}
+futures = "0.3.30"
